# Sparus

./: .eslintrc.yml  .gitignore  .gitpod.yml  .prettierignore  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json
.github/: dependabot.yml  release_note_config.json
.github/workflows/: android.yml  android_release.yml  build.yml  codeql.yml  dispatch.yml  fmt_clippy.yml  lint_prettier.yml  release.yml
src/: App.tsx  global.d.ts  main.tsx  routes.tsx  usePlugins.ts  usePlugins.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  Sparus-sample.json  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: desktop.json  migrated.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/locales/: fr-Fr.wxl
src-tauri/permissions/autogenerated/: call_plugin_function.toml  call_wasm_plugin_function.toml  check_if_installed.toml  get_current_path.toml  get_game_exe_name.toml  js_plugins_path.toml  update_available.toml  update_workspace.toml
src-tauri/proto/: echo.proto  sparus.proto
src-tauri/src/: errors.rs  lib.rs  main.rs  plugins.rs  rpc.rs  tray.rs  updater.rs  utils.rs
src/components/: Footer.tsx  Header.tsx  Index.tsx  Options.tsx  PluginManager.tsx  Plugins.tsx  PluginsManager.tsx
src/utils/: Context.ts  Context.tsx  SecureStorage.ts  SecureStorage.tsx  Storage.ts  usePlugins.tsx
src/views/: MobileIndex.tsx
