[package]
name = "sparus"
version = "0.4.1"
description = "Start and keep your game up-to-date with Sparus game launcher "
authors = [ "Ludea" ]
license = "Apache-2.0"
repository = "https://github.com/Ludea/Sparus"
edition = "2021"

[lib]
name = "libsparus"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }
tonic-prost-build = "0.14.0"
protox = "0.9"

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.build-dependencies]
tauri-runtime-verso-build = { git = "https://github.com/versotile-org/tauri-runtime-verso", rev = "ad4815ef7f0520c59e4c26e3dda987740351cb00" }

[dependencies]
axum = "0.8"
once_cell = "1.16"
locale_config = "0.3.0"
futures = "0.3.25"
tokio = "1.21.2"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "2", default-features = false, features = ["tray-icon", "common-controls-v6", "protocol-asset"] }
semver = "1.0.16"
libspeedupdate = { git = "https://github.com/ludea/speedupdate" }
prost = "0.14"
tonic = "0.14.0"
tonic-prost = "0.14"
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
getrandom = "0.3.1"
async-lock = "3.4.0"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime" }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime" } 
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = { version = "2", features = ["stream"] }

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-runtime-verso = { git = "https://github.com/versotile-org/tauri-runtime-verso", rev = "ad4815ef7f0520c59e4c26e3dda987740351cb00" }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri = { version = "2", features = ["protocol-asset", "custom-protocol"] }
tauri-plugin-fs = "2"
